syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.breez.service";
option java_outer_classname = "BreezProto";

package breez;

service Invoicer {
  rpc RegisterDevice (RegisterRequest) returns (RegisterReply) {}
  rpc SendInvoice (PaymentRequest) returns (InvoiceReply) {}
}

service CardOrderer {
  rpc Order (OrderRequest) returns (OrderReply) {}
}

service Pos {
  rpc RegisterDevice (RegisterRequest) returns (RegisterReply) {}
  rpc FundChannel (FundRequest) returns (FundReply) {}
  rpc UploadLogo (UploadFileRequest) returns (UploadFileReply) {}
}

service Information {
  rpc Ping (PingRequest) returns (PingReply) {}
}

service FundManager {
  rpc OpenChannel (OpenChannelRequest) returns (OpenChannelReply) {}
  rpc AddFund (AddFundRequest) returns (AddFundReply) {}
  rpc AddFundStatus (AddFundStatusRequest) returns (AddFundStatusReply) {}
  rpc RemoveFund (RemoveFundRequest) returns (RemoveFundReply) {}
  rpc GetPayment (GetPaymentRequest) returns (GetPaymentReply) {}
}

message OpenChannelRequest {
  string pubKey = 1;
}

message OpenChannelReply {}

message AddFundRequest {
  string paymentRequest = 1;
  string notificationToken = 2;
}

message AddFundReply {
  string address = 1;
  int64 maxAllowedDeposit = 2;
  string errorMessage = 3;
}

message AddFundStatusRequest {
  repeated string addresses = 1;
  string notificationToken = 2;
}

message AddFundStatusReply {
  message AddressStatus {
    string tx = 1;
    int64 amount = 2;
    bool confirmed = 3;
    string blockHash = 4;
  }
  map<string, AddressStatus> statuses = 1;  
}

message RemoveFundRequest {
  string address = 1;
  int64 amount = 2;
}

message RemoveFundReply {
}

message FundRequest {
  string deviceID = 1;
  string lightningID = 2;
  int64 amount = 3;
}

message FundReply {
  enum ReturnCode {
    SUCCESS = 0;
    UNKNOWN_ERROR = -1;
    NODE_BUSY = -2;
    CLIENT_NOT_REGISTERED = -3;
    WRONG_NODE_ID = -4;
    WRONG_AMOUNT = -5;
  }
  ReturnCode returnCode = 1;
}

message GetPaymentRequest {
  string paymentRequest = 1;
  string address = 2;
}

message GetPaymentReply {
  string paymentError = 1;
}

// The request message containing the device id and lightning id
message RegisterRequest {
  string deviceID = 1;
  string lightningID = 2;
}

// The response message containing the breez id
message RegisterReply {
  string breezID = 1;
}

message PaymentRequest {
  string breezID = 1;
  string invoice = 2;
  string payee = 3;
  int64 amount = 4;
}

message InvoiceReply {
  string Error = 1;
}

message UploadFileRequest {
  bytes content = 1;
}

message UploadFileReply {
  string url = 1;
}

message PingRequest {
}

message PingReply {
  string version = 1;
}

message OrderRequest {
  string FullName = 1;
  string Address = 2;
  string City = 3;
  string State = 4;
  string Zip = 5;
  string Country = 6;
}

message OrderReply {
}