syntax = "proto3";

option go_package = "github.com/breez/server/lsp/rpc";

package notifications;

service Notifications {
    rpc SubscribeNotifications(EncryptedNotificationRequest)
        returns (SubscribeNotificationsReply) {}
}  

message EncryptedNotificationRequest {
    bytes blob = 1;
}

message SubscribeNotificationsRequest {
    string url = 1;
    bytes signature = 2;
}

message SubscribeNotificationsReply {
}